1.5/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitools
  labels:
    app: nginx-multitools
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-multitools
  template:
    metadata:
      labels:
        app: nginx-multitools
    spec:
      containers:
      - name: multitools
        image: wbitt/network-multitool
      - name: nginx
        image: nginx:latest
