1.5/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  containers:
  - name: multitools
    image: wbitt/network-multitool
