1.5/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend
  ports:
    - name: backend
      protocol: TCP
      port: 9002
      targetPort: 80
