1.5/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: frontend
  ports:
    - name: frontend
      protocol: TCP
      port: 9001
      targetPort: 80
