1.5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: frontend
  ports:
    - name: frontend
      protocol: TCP
      port: 9001
      targetPort: 8080
    - name: backend
      protocol: TCP
      port: 9002
      targetPort: 80
