1.5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    http:
      paths:
      - path: /
        backend:
          service:
            name: frontend
            port:
              number: 9001
      - path: /api
        backend:
          service:
            name: backend
            port:
              number: 9002
